kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - host: conan.conan-ci
    http:
      paths:
      - path: /
        backend:
          serviceName: conan-server
          servicePort: 9300
  - host: public.conan-ci
    http:
      paths:
      - path: /
        backend:
          serviceName: public
          servicePort: 8080
  - host: phpmyadmin.conan-ci
    http:
      paths:
      - path: /
        backend:
          serviceName: phpmyadmin
          servicePort: 80
